--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
   "checkFiles": [
     "src/**/*.js*",
     "src/**/*.ts*",
+    "src/**/*.tsx*",
     "src/**/*.less",
     "config/**/*.js*",
     "scripts/**/*.js"
